--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
     "node-resemble-js": "^0.0.5",
     "node-schedule": "^1.1.0",
     "phantom": "^2.1.14",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "request": "^2.74.0",
     "resemblejs": "^2.2.0",
     "serve-favicon": "^2.3.0",
     "vue": "^1.0.26"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^8.0.0",
@@ -50,6 +56,8 @@
     "gulp-nodemon": "^2.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
-    "mocha": "^2.5.3"
+    "gulp-webpack": "^1.5.0",
+    "mocha": "^2.5.3",
+    "webpack": "^2.3.3"
   }
 }
